DigicielFull/force-app/main/default/objects/Activity/fields/Activity_Lead_GSM_ICT__c.field-meta.xml
<CustomField>
    <fullName>Activity_Lead_GSM_ICT__c</fullName>
    <label>Activity Lead GSM/ICT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>