DigicielFull/force-app/main/default/objects/Activity/fields/ActivitySubtype__c.field-meta.xml
<CustomField>
    <fullName>ActivitySubtype__c</fullName>
    <label>Activity Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Cold Call/ Discovery / Prospecting</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Proposal Review/ Negotiation</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Customer Care/ Relationship Building</fullName>
            </value>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>