DigicielFull/force-app/main/default/objects/Activity/fields/amc__Action_Id__c.field-meta.xml
<CustomField>
    <fullName>amc__Action_Id__c</fullName>
    <description>Used by triggers to keep Actions/Tasks and Events in Sync</description>
    <label>Action Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>