DigicielFull/force-app/main/default/objects/Activity/fields/Associated_Product_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Associated_Product_Subtype__c</fullName>
    <label>Associated Product Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Accessory / Add-on</fullName>
            </value>
            <value>
                <fullName>Alarm</fullName>
            </value>
            <value>
                <fullName>Build / Deploy</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>Closed User Group (CUG)</fullName>
            </value>
            <value>
                <fullName>Cloud UC as a Service</fullName>
            </value>
            <value>
                <fullName>Cloud US as a Service</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Connected Fleets</fullName>
            </value>
            <value>
                <fullName>Connected Infrastructures</fullName>
            </value>
            <value>
                <fullName>Connected People</fullName>
            </value>
            <value>
                <fullName>Connectivity Service BIA Installation</fullName>
            </value>
            <value>
                <fullName>Connectivity Service DIA</fullName>
            </value>
            <value>
                <fullName>Connectivity Services</fullName>
            </value>
            <value>
                <fullName>Data and Voice</fullName>
            </value>
            <value>
                <fullName>Data backup and Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Fixed Telephony</fullName>
            </value>
            <value>
                <fullName>Fixed Voice</fullName>
            </value>
            <value>
                <fullName>Infrastructure as a Service</fullName>
            </value>
            <value>
                <fullName>Infrastructure Subscription (IaaS)</fullName>
            </value>
            <value>
                <fullName>Manage and Operate</fullName>
            </value>
            <value>
                <fullName>Managed Service</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Mobile Advertisement</fullName>
            </value>
            <value>
                <fullName>Mobile Device and Unified Endpoint Management</fullName>
            </value>
            <value>
                <fullName>Mobile Device or Unified Endpoint Management</fullName>
            </value>
            <value>
                <fullName>Mobile Networks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>