DigicielFull/force-app/main/default/objects/Activity/fields/Call_Activity__c.field-meta.xml
<CustomField>
    <fullName>Call_Activity__c</fullName>
    <label>Call Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>