DigicielFull/force-app/main/default/objects/Activity/fields/Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Date_Time__c</fullName>
    <label>Call Date Time</label>
    <type>DateTime</type>
</CustomField>