DigicielFull/force-app/main/default/objects/Activity/fields/Call_Freeform__c.field-meta.xml
<CustomField>
    <fullName>Call_Freeform__c</fullName>
    <label>Call Freeform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>