DigicielFull/force-app/main/default/objects/Activity/fields/Call_Wrapup_2__c.field-meta.xml
<CustomField>
    <fullName>Call_Wrapup_2__c</fullName>
    <label>Call Wrapup 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>