DigicielFull/force-app/main/default/objects/Activity/fields/Call_Wrapup_3__c.field-meta.xml
<CustomField>
    <fullName>Call_Wrapup_3__c</fullName>
    <label>Call Wrapup 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>