DigicielFull/force-app/main/default/objects/Activity/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>Outgoing Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>