DigicielFull/force-app/main/default/objects/Activity/fields/CCIntegration__c.field-meta.xml
<CustomField>
    <fullName>CCIntegration__c</fullName>
    <label>CC Integration</label>
    <type>Url</type>
</CustomField>