DigicielFull/force-app/main/default/objects/Activity/fields/CheckOutAccuracy__c.field-meta.xml
<CustomField>
    <fullName>CheckOutAccuracy__c</fullName>
    <label>Check Out Accuracy (m)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>