DigicielFull/force-app/main/default/objects/Activity/fields/CheckOutLatitude__c.field-meta.xml
<CustomField>
    <fullName>CheckOutLatitude__c</fullName>
    <label>Check Out Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>