DigicielFull/force-app/main/default/objects/Activity/fields/CheckOutLongitude__c.field-meta.xml
<CustomField>
    <fullName>CheckOutLongitude__c</fullName>
    <label>Check Out Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>