DigicielFull/force-app/main/default/objects/Activity/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telephone Call</fullName>
            </value>
            <value>
                <fullName>Video Conference</fullName>
            </value>
            <value>
                <fullName>In-Person Meeting</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>