DigicielFull/force-app/main/default/objects/Activity/fields/Created_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Department__c</fullName>
    <formula>CreatedBy.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By: Department</label>
    <type>Text</type>
</CustomField>