DigicielFull/force-app/main/default/objects/Activity/fields/Created_by_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Profile</label>
    <type>Text</type>
</CustomField>