DigicielFull/force-app/main/default/objects/Activity/fields/CreatedLatitude__c.field-meta.xml
<CustomField>
    <fullName>CreatedLatitude__c</fullName>
    <label>Created Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>