DigicielFull/force-app/main/default/objects/Activity/fields/CreatedLocationVerified__c.field-meta.xml
<CustomField>
    <fullName>CreatedLocationVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Location Verified</label>
    <type>Checkbox</type>
</CustomField>