DigicielFull/force-app/main/default/objects/Activity/fields/CreatedLongitude__c.field-meta.xml
<CustomField>
    <fullName>CreatedLongitude__c</fullName>
    <label>Created Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>