DigicielFull/force-app/main/default/objects/Activity/fields/CTI_DNIS__c.field-meta.xml
<CustomField>
    <fullName>CTI_DNIS__c</fullName>
    <label>Caller ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>