DigicielFull/force-app/main/default/objects/Activity/fields/Date_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Date_Cycle__c</fullName>
    <label>Date Cycle</label>
    <type>Date</type>
</CustomField>