DigicielFull/force-app/main/default/objects/Activity/fields/Delivery_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Name__c</fullName>
    <label>Delivery Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>