DigicielFull/force-app/main/default/objects/Activity/fields/Extended_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Extended_Call_Type__c</fullName>
    <label>Extended Call Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>