DigicielFull/force-app/main/default/objects/Activity/fields/F2FRequested__c.field-meta.xml
<CustomField>
    <fullName>F2FRequested__c</fullName>
    <label>F2F Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>