DigicielFull/force-app/main/default/objects/Activity/fields/FacetoFaceOutcome__c.field-meta.xml
<CustomField>
    <fullName>FacetoFaceOutcome__c</fullName>
    <label>Face to Face Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>F2FRequested__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected in Favor of Call</fullName>
            </value>
            <value>
                <fullName>Rejected in Favor of VC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>