DigicielFull/force-app/main/default/objects/Activity/fields/Lead_Record_Type_Value_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_Value_from_Lead__c</fullName>
    <label>Task Record Type Value from Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Samoa GSM</fullName>
            </value>
            <value>
                <fullName>Samoa ICT</fullName>
            </value>
            <value>
                <fullName>Samoa Mobile</fullName>
            </value>
            <value>
                <fullName>Tonga GSM</fullName>
            </value>
            <value>
                <fullName>Tonga ICT</fullName>
            </value>
            <value>
                <fullName>Tonga Mobile</fullName>
            </value>
            <value>
                <fullName>Fiji GSM</fullName>
            </value>
            <value>
                <fullName>Fiji ICT</fullName>
            </value>
            <value>
                <fullName>Fiji Mobile</fullName>
            </value>
            <value>
                <fullName>PNG GSM</fullName>
            </value>
            <value>
                <fullName>PNG ICT</fullName>
            </value>
            <value>
                <fullName>PNG Mobile</fullName>
            </value>
            <value>
                <fullName>Vanuatu GSM</fullName>
            </value>
            <value>
                <fullName>Vanuatu ICT</fullName>
            </value>
            <value>
                <fullName>Vanuatu Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>