DigicielFull/force-app/main/default/objects/Activity/fields/Meeting_Stage__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Stage__c</fullName>
    <label>Meeting Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Meeting</fullName>
            </value>
            <value>
                <fullName>2nd Meeting</fullName>
            </value>
            <value>
                <fullName>3rd Meeting</fullName>
            </value>
            <value>
                <fullName>4th Meeting</fullName>
            </value>
            <value>
                <fullName>5th Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>