DigicielFull/force-app/main/default/objects/Activity/fields/MeetingActivity__c.field-meta.xml
<CustomField>
    <fullName>MeetingActivity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MeetingPurpose__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Manager Support Call</fullName>
            </value>
            <value>
                <fullName>Account Review</fullName>
            </value>
            <value>
                <fullName>Relationship Call</fullName>
            </value>
            <value>
                <fullName>Renewal / Resign</fullName>
            </value>
            <value>
                <fullName>Debt</fullName>
            </value>
            <value>
                <fullName>Network Issue</fullName>
            </value>
            <value>
                <fullName>Handset</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Admin / Contract Follow-up</fullName>
            </value>
            <value>
                <fullName>Upsell New / Existing Product</fullName>
            </value>
            <value>
                <fullName>Upsell Price on Existing Product</fullName>
            </value>
            <value>
                <fullName>New Product to Existing Customer</fullName>
            </value>
            <value>
                <fullName>New Product to New Customer</fullName>
            </value>
            <value>
                <fullName>Reconnection of Existing Service</fullName>
            </value>
            <value>
                <fullName>Downgraded number of connections</fullName>
            </value>
            <value>
                <fullName>Downgrade/ Dilution price of existing product</fullName>
            </value>
            <value>
                <fullName>Disconnection - Competitor price</fullName>
            </value>
            <value>
                <fullName>Disconnection - Network/ Technical Issue</fullName>
            </value>
            <value>
                <fullName>Disconnection - Service/ Care Issues</fullName>
            </value>
            <value>
                <fullName>Disconnection - debt/ economic&quot;</fullName>
            </value>
            <value>
                <fullName>Disconnection Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>