DigicielFull/force-app/main/default/objects/Activity/fields/MeetingPurpose__c.field-meta.xml
<CustomField>
    <fullName>MeetingPurpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retain</fullName>
            </value>
            <value>
                <fullName>Manage / Service</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>