DigicielFull/force-app/main/default/objects/Activity/fields/MeetingType__c.field-meta.xml
<CustomField>
    <fullName>MeetingType__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Meeting</fullName>
            </value>
            <value>
                <fullName>Second Meeting</fullName>
            </value>
            <value>
                <fullName>New Customer Follow Up Meeting</fullName>
            </value>
            <value>
                <fullName>Existing Customer Follow Up Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>