DigicielFull/force-app/main/default/objects/Activity/fields/Mth_Meeting_Target__c.field-meta.xml
<CustomField>
    <fullName>Mth_Meeting_Target__c</fullName>
    <label>Mth Meeting Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>