DigicielFull/force-app/main/default/objects/Activity/fields/Number_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Events__c</fullName>
    <formula>ISPICKVAL( Sub_Outcome_1__c , &apos;Event Created&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Events</label>
    <type>Checkbox</type>
</CustomField>