DigicielFull/force-app/main/default/objects/Activity/fields/PBX_Ref__c.field-meta.xml
<CustomField>
    <fullName>PBX_Ref__c</fullName>
    <externalId>true</externalId>
    <label>PBX Ref or Call Ref</label>
    <length>32</length>
    <type>Text</type>
</CustomField>