DigicielFull/force-app/main/default/objects/Activity/fields/PNG_CompletionDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>PNG_CompletionDateAndTime__c</fullName>
    <formula>CompletedDateTime</formula>
    <label>Completion Date and Time</label>
    <type>DateTime</type>
</CustomField>