DigicielFull/force-app/main/default/objects/Activity/fields/PNG_MilestoneViolatedTask__c.field-meta.xml
<CustomField>
    <fullName>PNG_MilestoneViolatedTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone Violated Task</label>
    <type>Checkbox</type>
</CustomField>