DigicielFull/force-app/main/default/objects/Activity/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <length>10</length>
    <type>Text</type>
</CustomField>