DigicielFull/force-app/main/default/objects/Activity/fields/Sub_Outcome_1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Outcome_1__c</fullName>
    <description>These values are selected based on the Outcome chosen</description>
    <label>Sub-Outcome 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Outcome__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Event Created</fullName>
            </value>
            <value>
                <fullName>In Contract</fullName>
            </value>
            <value>
                <fullName>Issues with Digicel Brand/Image</fullName>
            </value>
            <value>
                <fullName>Prices are too high</fullName>
            </value>
            <value>
                <fullName>No Budget at this time</fullName>
            </value>
            <value>
                <fullName>Previous Bad Service Experience</fullName>
            </value>
            <value>
                <fullName>Business Not Operational</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Event Tentative</fullName>
            </value>
            <value>
                <fullName>Requested Info via Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>