DigicielFull/force-app/main/default/objects/Activity/fields/Sub_Outcome_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Outcome_2__c</fullName>
    <label>Sub-Outcome 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Outcome_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Provider Options</fullName>
            </value>
            <value>
                <fullName>When is Budget Cycle</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Home and Entertainment</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>