DigicielFull/force-app/main/default/objects/Activity/fields/SubCallType__c.field-meta.xml
<CustomField>
    <fullName>SubCallType__c</fullName>
    <label>Sub Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CallType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Call</fullName>
            </value>
            <value>
                <fullName>Second Call</fullName>
            </value>
            <value>
                <fullName>Existing Customer Call</fullName>
            </value>
            <value>
                <fullName>New Customer Follow Up Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>