DigicielFull/force-app/main/default/objects/Activity/fields/Task_Key__c.field-meta.xml
<CustomField>
    <fullName>Task_Key__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Key</label>
    <type>Text</type>
</CustomField>