DigicielFull/force-app/main/default/objects/Activity/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <formula>Owner:User.Id</formula>
    <label>User ID</label>
    <type>Text</type>
</CustomField>