DigicielFull/force-app/main/default/objects/Activity/fields/Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time__c</fullName>
    <label>Wait Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>