DigicielFull/force-app/main/default/objects/Activity/fields/Weekly_Meeting_Target__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Meeting_Target__c</fullName>
    <formula>Mth_Meeting_Target__c /4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Meeting Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>