DigicielFull/force-app/main/default/objects/Activity/fields/WeeklyMeetingsTarget__c.field-meta.xml
<CustomField>
    <fullName>WeeklyMeetingsTarget__c</fullName>
    <formula>Owner:User.WeeklyMeetings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Meetings Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>